--- a/CSharp/UnitTesting/UnitTesting/UnitTesting.csproj
+++ b/CSharp/UnitTesting/UnitTesting/UnitTesting.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\ICourse.cs" />
+    <Compile Include="Contracts\IStudent.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="School.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
