--- a/CSharp/UnitTesting/UnitTesting/UnitTesting.csproj
+++ b/CSharp/UnitTesting/UnitTesting/UnitTesting.csproj
@@ -44,17 +44,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\ICourse.cs" />
+    <Compile Include="Contracts\IGenerateId.cs" />
+    <Compile Include="Contracts\IIdentifiable.cs" />
+    <Compile Include="Contracts\ISchool.cs" />
+    <Compile Include="Contracts\INameable.cs" />
     <Compile Include="Contracts\IStudent.cs" />
-    <Compile Include="Course.cs" />
-    <Compile Include="School.cs" />
-    <Compile Include="StartUp.cs" />
+    <Compile Include="Exceptions\ArgumentNotUniqueException.cs" />
+    <Compile Include="Exceptions\CourseException.cs" />
+    <Compile Include="Models\Base\BaseNameableObject.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\School.cs" />
+    <Compile Include="Models\StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="Validator.cs" />
+    <Compile Include="Models\Student.cs" />
+    <Compile Include="Utils\GenerateId.cs" />
+    <Compile Include="Utils\IdGenerator.cs" />
+    <Compile Include="Utils\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
