--- a/CSharp/05. High Quality Code Part 1/Events/Events/Events.Logic.csproj
+++ b/CSharp/05. High Quality Code Part 1/Events/Events/Events.Logic.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandProcessor.cs" />
+    <Compile Include="Contracts\IEventHolder.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventHolder.cs" />
     <Compile Include="Messages.cs" />
@@ -56,11 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
