--- a/CSharp/05. High Quality Code Part 1/Bunnies/Bunnies.Logic/Bunnies.Logic/Bunnies.Logic.csproj
+++ b/CSharp/05. High Quality Code Part 1/Bunnies/Bunnies.Logic/Bunnies.Logic/Bunnies.Logic.csproj
@@ -47,7 +47,7 @@
     <Compile Include="ConsoleWriter.cs" />
     <Compile Include="Contracts\IWritter.cs" />
     <Compile Include="Enums\FurType.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtension.cs" />
   </ItemGroup>
