Models folder added

--- a/CSharp/05. High Quality Code Part 1/01. Events and Bunnies/Events/Events.Logic/Events.Logic.csproj
+++ b/CSharp/05. High Quality Code Part 1/01. Events and Bunnies/Events/Events.Logic/Events.Logic.csproj
@@ -44,16 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandProcessor.cs" />
+    <Compile Include="Models\CommandProcessor.cs" />
     <Compile Include="Contracts\IEventHolder.cs" />
-    <Compile Include="Event.cs" />
-    <Compile Include="EventHolder.cs" />
-    <Compile Include="Messages.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\EventHolder.cs" />
+    <Compile Include="Models\Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
