--- a/CSharp/05. High Quality Code Part 1/01. Events and Bunnies/Bunnies/Bunnies.Logic/Bunnies.Logic/Bunnies.Logic.csproj
+++ b/CSharp/05. High Quality Code Part 1/01. Events and Bunnies/Bunnies/Bunnies.Logic/Bunnies.Logic/Bunnies.Logic.csproj
@@ -43,13 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bunny.cs" />
-    <Compile Include="ConsoleWriter.cs" />
+    <Compile Include="Models\Bunny.cs" />
+    <Compile Include="Models\ConsoleWriter.cs" />
     <Compile Include="Contracts\IWritter.cs" />
     <Compile Include="Enums\FurType.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtension.cs" />
+    <Compile Include="Models\StringExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
