Naming fixed and class extracted.

--- a/CSharp/05. High Quality Code Part 1/02. Naming/Task-4/Minesweeper.csproj
+++ b/CSharp/05. High Quality Code Part 1/02. Naming/Task-4/Minesweeper.csproj
@@ -76,6 +76,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BombSetter.cs" />
     <Compile Include="CommandReader.cs" />
     <Compile Include="Contracts\IDrawer.cs" />
     <Compile Include="Contracts\IGetterOfParameters.cs" />
