--- a/CSharp/05. High Quality Code Part 1/02. Naming/Task-4/Minesweeper.csproj
+++ b/CSharp/05. High Quality Code Part 1/02. Naming/Task-4/Minesweeper.csproj
@@ -84,6 +84,7 @@
     <Compile Include="GetParameters.cs" />
     <Compile Include="PointsHolder.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="RangList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
