--- a/CSharp/05. High Quality Code Part 1/05. Control Flow and co/ControlFlowAndStuff/ControlFlowAndStuff/ControlFlowAndStuff.csproj
+++ b/CSharp/05. High Quality Code Part 1/05. Control Flow and co/ControlFlowAndStuff/ControlFlowAndStuff/ControlFlowAndStuff.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bowl.cs" />
+    <Compile Include="Carrot.cs" />
+    <Compile Include="Chef.cs" />
+    <Compile Include="Potato.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vegetable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
