--- a/CSharp/05. High Quality Code Part 1/05. Control Flow and co/ControlFlowAndStuff/ControlFlowAndStuff/ControlFlowAndStuff.csproj
+++ b/CSharp/05. High Quality Code Part 1/05. Control Flow and co/ControlFlowAndStuff/ControlFlowAndStuff/ControlFlowAndStuff.csproj
@@ -47,8 +47,9 @@
     <Compile Include="Carrot.cs" />
     <Compile Include="Chef.cs" />
     <Compile Include="Potato.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Task-3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task-2\RefactorIfStatement.cs" />
     <Compile Include="Vegetable.cs" />
   </ItemGroup>
   <ItemGroup>
