--- a/CSharp/05. High Quality Code Part 1/06. Methods/FIRST TASK/Methods/Methods.csproj
+++ b/CSharp/05. High Quality Code Part 1/06. Methods/FIRST TASK/Methods/Methods.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IStudent.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
