--- a/CSharp/05. High Quality Code Part 1/07. Classes/Abstraction/Abstraction.csproj
+++ b/CSharp/05. High Quality Code Part 1/07. Classes/Abstraction/Abstraction.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Rectangle.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Contracts\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
