Task abstraction relatively done.

--- a/CSharp/05. High Quality Code Part 1/07. Classes/Abstraction/Abstraction.csproj
+++ b/CSharp/05. High Quality Code Part 1/07. Classes/Abstraction/Abstraction.csproj
@@ -36,12 +36,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
+    <Compile Include="Contracts\IFigure.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="FiguresExample.cs" />
     <Compile Include="Rectangle.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Contracts\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
