--- a/CSharp/05. High Quality Code Part 1/07. Classes/Cohesion-and-Coupling/Cohesion-and-Coupling.csproj
+++ b/CSharp/05. High Quality Code Part 1/07. Classes/Cohesion-and-Coupling/Cohesion-and-Coupling.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DistanceCalculator.cs" />
+    <Compile Include="FileNameManipulator.cs" />
     <Compile Include="UtilsExamples.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
