--- a/CSharp/05. High Quality Code Part 1/07. Classes/Abstraction/Abstraction.csproj
+++ b/CSharp/05. High Quality Code Part 1/07. Classes/Abstraction/Abstraction.csproj
@@ -35,10 +35,10 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
+    <Compile Include="Figures\Circle.cs" />
     <Compile Include="Contracts\IFigure.cs" />
     <Compile Include="FiguresExample.cs" />
-    <Compile Include="Rectangle.cs" />
+    <Compile Include="Figures\Rectangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
