--- a/ExamPractice/05. JavaScript OOP/package.json
+++ b/ExamPractice/05. JavaScript OOP/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec tests"
+    "test": "node_modules/mocha/bin/mocha -R spec tests"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^3.0.0"
+    "chai": "^3.0.0",
+    "mocha": "^3.0.2"
   }
 }
