--- a/CSharp/06. High Quality Code Part 2/Exceptions-Homework/Exceptions-Homework.csproj
+++ b/CSharp/06. High Quality Code Part 2/Exceptions-Homework/Exceptions-Homework.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CSharpExam.cs" />
     <Compile Include="ExamResult.cs" />
+    <Compile Include="AdditionalExceptions\NumberIsNotPrime.cs" />
     <Compile Include="SimpleMathExam.cs" />
     <Compile Include="ExceptionsHomework.cs" />
     <Compile Include="Exam.cs" />
