--- a/WorkShops/02. JavaScriopt Applications/WorkShop2015/forum-workshop-template/package.json
+++ b/WorkShops/02. JavaScriopt Applications/WorkShop2015/forum-workshop-template/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.3",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "systemjs": "^0.19.38",
+    "systemjs-plugin-babel": "0.0.15"
   }
 }
