--- a/WebTrack/07. Database/02. Processing XML in .NET/ProcessingXMLinDotNET/ProcessingXMLinDotNET/ProcessingXMLinDotNET.csproj
+++ b/WebTrack/07. Database/02. Processing XML in .NET/ProcessingXMLinDotNET/ProcessingXMLinDotNET/ProcessingXMLinDotNET.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AA507D08-08D5-415E-BA5A-34C7EBEAD3CE}</ProjectGuid>
+    <ProjectGuid>{B2414B59-6680-45D0-ACE1-5A4D7BA15045}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XML_Basics</RootNamespace>
-    <AssemblyName>XML Basics</AssemblyName>
+    <RootNamespace>ProcessingXMLinDotNET</RootNamespace>
+    <AssemblyName>ProcessingXMLinDotNET</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,10 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="students.xml" />
-    <Content Include="studentsXSL.xslt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
