--- a/WebTrack/07. Database/03. Processing JSON in .NET/HWJSON/HWJSON/HWJSON.csproj
+++ b/WebTrack/07. Database/03. Processing JSON in .NET/HWJSON/HWJSON/HWJSON.csproj
@@ -43,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IFileCreator.cs" />
+    <Compile Include="Manufacture\FileCreator.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="youtubeRSS.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
