Successfully parsed xml to json string

--- a/WebTrack/07. Database/03. Processing JSON in .NET/HWJSON/HWJSON/HWJSON.csproj
+++ b/WebTrack/07. Database/03. Processing JSON in .NET/HWJSON/HWJSON/HWJSON.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,12 +48,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IFileCreator.cs" />
-    <Compile Include="Manufacture\FileCreator.cs" />
+    <Compile Include="Contracts\IParser.cs" />
+    <Compile Include="Manufacture\ExtractXMLFile.cs" />
+    <Compile Include="Parsers\JSONParser.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="youtubeRSS.xml" />
