HW InsertCustomer done.

--- a/WebTrack/07. Database/10. EntityFramework/HW Redone/EntityFrameworkHW/EntityFrameworkHW/EntityFrameworkHW.csproj
+++ b/WebTrack/07. Database/10. EntityFramework/HW Redone/EntityFrameworkHW/EntityFrameworkHW/EntityFrameworkHW.csproj
@@ -63,6 +63,7 @@
     <Compile Include="CustomerDemographic.cs">
       <DependentUpon>NorthwindEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAO.cs" />
     <Compile Include="Employee.cs">
       <DependentUpon>NorthwindEntities.tt</DependentUpon>
     </Compile>
