Method TransferServer added

--- a/WebTrack/07. Database/10. EntityFramework/HW Redone/EntityFrameworkHW/EntityFrameworkHW/EntityFrameworkHW.csproj
+++ b/WebTrack/07. Database/10. EntityFramework/HW Redone/EntityFrameworkHW/EntityFrameworkHW/EntityFrameworkHW.csproj
@@ -82,6 +82,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>NorthwindEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="NorthwindEntitiesExtended.cs" />
     <Compile Include="Order.cs">
       <DependentUpon>NorthwindEntities.tt</DependentUpon>
     </Compile>
