--- a/ExamPractice/07. Database/2014/Solution/CompanySampleDataImporter/CompanySampleDataImporter.Data/CompanySampleDataImporter.Data.csproj
+++ b/ExamPractice/07. Database/2014/Solution/CompanySampleDataImporter/CompanySampleDataImporter.Data/CompanySampleDataImporter.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{81E0FF1F-4859-40A1-8486-DEB756864520}</ProjectGuid>
+    <ProjectGuid>{AC59372E-09B1-4BC7-BA11-AD621D181A25}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>CompanySampleDataImporter.Data</RootNamespace>
+    <AssemblyName>CompanySampleDataImporter.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -51,61 +51,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompanyEntites.Context.cs">
+    <Compile Include="CompanyEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CompanyEntites.Context.tt</DependentUpon>
+      <DependentUpon>CompanyEntities.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="CompanyEntites.cs">
+    <Compile Include="CompanyEntities.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CompanyEntites.tt</DependentUpon>
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="CompanyEntites.Designer.cs">
+    <Compile Include="CompanyEntities.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CompanyEntites.edmx</DependentUpon>
+      <DependentUpon>CompanyEntities.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Departments.cs">
-      <DependentUpon>CompanyEntites.tt</DependentUpon>
+    <Compile Include="Department.cs">
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Employees.cs">
-      <DependentUpon>CompanyEntites.tt</DependentUpon>
+    <Compile Include="Employee.cs">
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Projects.cs">
-      <DependentUpon>CompanyEntites.tt</DependentUpon>
+    <Compile Include="Project.cs">
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="ProjectsEmployees.cs">
-      <DependentUpon>CompanyEntites.tt</DependentUpon>
+    <Compile Include="ProjectsEmployee.cs">
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reports.cs">
-      <DependentUpon>CompanyEntites.tt</DependentUpon>
+    <Compile Include="Report.cs">
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>CompanyEntities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="CompanyEntites.edmx">
+    <EntityDeploy Include="CompanyEntities.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>CompanyEntites.Designer.cs</LastGenOutput>
+      <LastGenOutput>CompanyEntities.Designer.cs</LastGenOutput>
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <None Include="CompanyEntites.edmx.diagram">
-      <DependentUpon>CompanyEntites.edmx</DependentUpon>
+    <None Include="CompanyEntities.edmx.diagram">
+      <DependentUpon>CompanyEntities.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CompanyEntites.Context.tt">
+    <Content Include="CompanyEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CompanyEntites.edmx</DependentUpon>
-      <LastGenOutput>CompanyEntites.Context.cs</LastGenOutput>
+      <DependentUpon>CompanyEntities.edmx</DependentUpon>
+      <LastGenOutput>CompanyEntities.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="CompanyEntites.tt">
+    <Content Include="CompanyEntities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CompanyEntites.edmx</DependentUpon>
-      <LastGenOutput>CompanyEntites.cs</LastGenOutput>
+      <DependentUpon>CompanyEntities.edmx</DependentUpon>
+      <LastGenOutput>CompanyEntities.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
