Interfaces added in connection to School and ISchool

--- a/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Framework/SchoolSystem.Framework.csproj
+++ b/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Framework/SchoolSystem.Framework.csproj
@@ -61,13 +61,20 @@
     <Compile Include="Models\Abstractions\Person.cs" />
     <Compile Include="Models\Contracts\IAddStudent.cs" />
     <Compile Include="Models\Contracts\IAddTeacher.cs" />
+    <Compile Include="Models\Contracts\IGetStudent.cs" />
+    <Compile Include="Models\Contracts\IGetStudentAndTeacher.cs" />
+    <Compile Include="Models\Contracts\IGetTeacher.cs" />
     <Compile Include="Models\Contracts\IMark.cs" />
     <Compile Include="Models\Contracts\IPerson.cs" />
+    <Compile Include="Models\Contracts\IRemoveStudent.cs" />
+    <Compile Include="Models\Contracts\IRemoveTeacher.cs" />
+    <Compile Include="Models\Contracts\ISchool.cs" />
     <Compile Include="Models\Contracts\IStudent.cs" />
     <Compile Include="Models\Contracts\ITeacher.cs" />
     <Compile Include="Models\Enums\Grade.cs" />
     <Compile Include="Models\Enums\Subject.cs" />
     <Compile Include="Models\Mark.cs" />
+    <Compile Include="Models\School.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\Teacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
