Last Update - OOP 2

--- a/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
+++ b/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
@@ -53,5 +53,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\School\School.csproj">
+      <Project>{cbc96b9d-a437-49d4-8874-60e88a7a308f}</Project>
+      <Name>School</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
