--- a/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/MyOnlyCatServer/Properties/launchSettings.json
+++ b/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/MyOnlyCatServer/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:62739",
-      "sslPort": 44397
+      "applicationUrl": "http://localhost:50818",
+      "sslPort": 44314
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "FluffyCatServer": {
+    "MyOnlyCatServer": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
